[project]
name = "lpg"
authors = [
    {name = "Galdin Raphael",email = "gldraphael@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "dynaconf (>=3.2.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[virtualenvs]
create = true
in-project = true
